_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-top: 5px solid $grey-color-dark;
    border-bottom: 1px solid $grey-color-light;
    min-height: 56px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    font-size: 60px;
    font-weight: 300;
    line-height: 1em;
    letter-spacing: -1px;
    margin-bottom: 0;
    span {
        color: $grey-color;
        letter-spacing: 13px;
        text-transform: uppercase;
        display: block;
        font-size: 25px;
        line-height: 1em;
        font-weight: 700;
        &:before {
            content: "~";
            font-weight: 400;
        }
        &:after {
            content: "~";
            font-weight: 400;
        }
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the last one
        &:not(:last-child) {
            margin-right: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        top: 9px;
        right: $spacing-unit / 2;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;

            &:not(:last-child) {
                margin-right: 0;
            }
            margin-left: 20px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}



/**
 * Page content
 */
.page-content {
    padding: $spacing-unit 0;
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

























html {
  -webkit-font-smoothing: antialiased;
}

.c-red { color: rgb(197, 45, 47) !important }
.c-grey { color: $grey-color !important }
.c-darkgrey { color: $grey-color-dark !important }
.btc-red { border-top-color: rgb(197, 45, 47) }
.gc-red { background-color: rgb(197, 45, 47) }
.gc-lightgrey { background-color: $grey-color-light }
.bc-red { border-color: rgb(197, 45, 47) }
.bc-lightgrey { border-color: $grey-color-light }
.bs-s { border-style: solid }
.bw-0 { border-width: 0 }
.bw-1p { border-width: 1px }
.ta-c { text-align: center }
.w-100\% { width: 100% }
.mb-1 { margin-bottom: 1em }
.mb-2 { margin-bottom: 2em }
.mt-1 { margin-top: 1em }
.mt-2 { margin-top: 2em }
.p-1 { padding: 1em }
.pt-3 { padding-top: 3em }
.bbw-1p { border-bottom-width: 1px }
.btw-1p { border-top-width: 1px }
.bc-l\.8 { border-color: hsl(0, 0%, 80%) }
.c-l\.8 { color: hsl(0, 0%, 80%) }
.m-0 { margin: 0 }
.bs-3p { border-radius: 3px }
.d-ib { display: inline-block }
.px_1 > * { padding-left: 1em; padding-right: 1em }
.py_\.5 > * { padding-top: .5em; padding-bottom: .5em }
.mx_\.5 > * { margin-left: .5em; margin-right: .5em }

.fs-24p { font-size: 24px }

/* theme */
.ff-normal { font-family: 'Vollkorn', serif; font-weight: 400; }
.ff-bold { font-family: 'Vollkorn', serif; font-weight: 700; }
.ff-sans { font-family: 'Lato', sans-serif; font-weight: 300; }

.bbw-0\:lc { border-bottom-width: 0 }

